Bug 295669 - converting to CMYK using a profile crash
Summary: converting to CMYK using a profile crash
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color models (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-10 12:26 UTC by David REVOY
Modified: 2012-03-13 21:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2012-03-10 12:26:56 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/535.11 (KHTML, like Gecko) Ubuntu/11.10 Chromium/17.0.963.66 Chrome/17.0.963.66 Safari/535.11
Build Identifier: 

It seems Krita crash everytime I try to convert a document RGB to a CMYK according to a printer profile ( ISO eci , or Fogra27 )  My fault for not testing it since a while , Mango and my past project required only RGB workflow. I hope Krita 2.4 is not affected , it's a sort of unique feature most of user would try it at first.

Reproducible: Always

Steps to Reproduce:
1. Open a new document RGB, or open a RGB picture 
2. Got to image > Convert Image type > CMYK - 8 Bit - open a profile from a printer ( tested here with ISOCoated_ECI, Fogra27 )
3. Validate
Actual Results:  
Krita crash
backtrace : http://www.pasteall.org/29907/bash

Expected Results:  
Krita convert the image

without attributing a profile, Krita convert fine.
Comment 1 Halla Rempt 2012-03-10 14:30:44 UTC
Hm, for some reason, the profile is 0....
Thread 1 (Thread 0x7fb421820780 (LWP 11385)):
[KCrash Handler]
#6  0x00007fb3fdd58ec8 in cmsSaveProfileToIOhandler (hProfile=<optimized out>, io=0x0) at /usr/include/x86_64-linux-gnu/bits/string3.h:58
#7  0x00007fb3fdd592b2 in cmsSaveProfileToMem (hProfile=0x0, MemPtr=0x0, BytesNeeded=0x7fffbdd289dc) at cmsio0.c:1268
#8  0x00007fb3fe16d833 in LcmsColorProfileContainer::lcmsProfileToByteArray (profile=0x0) at /home/deevad/sources/krita/calligra/calligra-src/plugins/colorengines/lcms2/colorprofiles/LcmsColorProfileContainer.cpp:67
#9  0x00007fb3fe16da3c in LcmsColorProfileContainer::createFromLcmsProfile (profile=0x0) at /home/deevad/sources/krita/calligra/calligra-src/plugins/colorengines/lcms2/colorprofiles/LcmsColorProfileContainer.cpp:81
#10 0x00007fb3fe16f352 in IccColorSpaceEngine::addProfile (this=<optimized out>, filename=...) at /home/deevad/sources/krita/calligra/calligra-src/plugins/colorengines/lcms2/IccColorSpaceEngine.cpp:131
#11 0x00007fb403fa99e9 in KisColorSpaceSelector::installProfile (this=0x6ef1700) at /home/deevad/sources/krita/calligra/calligra-src/krita/ui/widgets/kis_color_space_selector.cc:188
#12 0x00007fb403fa9e14 in KisColorSpaceSelector::qt_metacall (this=0x6ef1700, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffbdd28d30) at /home/deevad/sources/krita/calligra/calligra-build/krita/ui/kis_color_space_selector.moc:93
#13 0x00007fb4204b5eba in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#14 0x00007fb41fec3642 in QAbstractButton::clicked(bool) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#15 0x00007fb41fc091fe in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#16 0x00007fb41fc0a53b in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#17 0x00007fb41fc0a7ac in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#18 0x00007fb41f8a2cea in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#19 0x00007fb41f852474 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#20 0x00007fb41f857cbb in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#21 0x00007fb421210466 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#22 0x00007fb4204a2afc in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#23 0x00007fb41f853442 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#24 0x00007fb41f8d29d5 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#25 0x00007fb41f8d194e in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#26 0x00007fb41f8faeba in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#27 0x00007fb4204a1cf2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#28 0x00007fb4204a1ef7 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#29 0x00007fb41fd092d6 in QDialog::exec() () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#30 0x00007fb3e8c838fb in ColorSpaceConversion::slotImageColorSpaceConversion (this=<optimized out>) at /home/deevad/sources/krita/calligra/calligra-src/krita/plugins/extensions/colorspaceconversion/colorspaceconversion.cc:104
#31 0x00007fb3e8c84330 in ColorSpaceConversion::qt_metacall (this=0x92b80c0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=<optimized out>) at /home/deevad/sources/krita/calligra/calligra-build/krita/plugins/extensions/colorspaceconversion/colorspaceconversion.moc:77
#32 0x00007fb4204b5eba in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#33 0x00007fb41f84bbb2 in QAction::triggered(bool) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#34 0x00007fb41f84bd9f in QAction::activate(QAction::ActionEvent) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#35 0x00007fb41fc866c9 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#36 0x00007fb41fc8c312 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#37 0x00007fb4212d20d0 in KMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libkdeui.so.5
#38 0x00007fb41f8a2cea in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#39 0x00007fb41fc8d8bb in QMenu::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#40 0x00007fb41f852474 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#41 0x00007fb41f857cbb in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#42 0x00007fb421210466 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#43 0x00007fb4204a2afc in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#44 0x00007fb41f853442 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#45 0x00007fb41f8d3091 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#46 0x00007fb41f8d194e in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#47 0x00007fb41f8faeba in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#48 0x00007fb4204a1cf2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#49 0x00007fb4204a1ef7 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#50 0x00007fb4204a6789 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#51 0x00007fb40d25d20d in kdemain (argc=<optimized out>, argv=<optimized out>) at /home/deevad/sources/krita/calligra/calligra-src/krita/main.cc:71
#52 0x0000000000408547 in _start ()
Comment 2 Halla Rempt 2012-03-10 14:31:11 UTC
I guess you used the add profile button, not a profile that was already in the list?
Comment 3 Halla Rempt 2012-03-10 14:32:08 UTC
Oh, and just to make sure I test correcly -- could you attach the profile you use or mail it to me?
Comment 4 Halla Rempt 2012-03-10 19:12:01 UTC
Git commit 18b58232504c6aa12b7c4cf95222a3a7fd763d22 by Boudewijn Rempt.
Committed on 10/03/2012 at 20:10.
Pushed by rempt into branch 'master'.

don't crash when installing a new profile

M  +5    -1    krita/ui/widgets/kis_color_space_selector.cc

http://commits.kde.org/calligra/18b58232504c6aa12b7c4cf95222a3a7fd763d22
Comment 5 Halla Rempt 2012-03-10 19:13:53 UTC
Git commit 0b2c28c2d9a17bac657dcbb92e3b98cdd5a40764 by Boudewijn Rempt.
Committed on 10/03/2012 at 20:10.
Pushed by rempt into branch '2.4'.

don't crash when installing a new profile

M  +5    -1    krita/ui/widgets/kis_color_space_selector.cc

http://commits.kde.org/calligra/0b2c28c2d9a17bac657dcbb92e3b98cdd5a40764
Comment 6 Halla Rempt 2012-03-13 21:58:19 UTC
Git commit 2c9e19a0aba3e0e4ab2f90f4118fff71438e1050 by Boudewijn Rempt.
Committed on 10/03/2012 at 20:10.
Pushed by rempt into branch 'calligra/2.4'.

don't crash when installing a new profile

M  +5    -1    krita/ui/widgets/kis_color_space_selector.cc

http://commits.kde.org/calligra/2c9e19a0aba3e0e4ab2f90f4118fff71438e1050