don't crash when installing a new profile

BUG:295669